fix: background blur flickering with safari

--- a/source/css/layout/_partials/home-banner.styl
+++ b/source/css/layout/_partials/home-banner.styl
@@ -11,6 +11,8 @@ $home-banner-icon-size = 1.6rem
 .home-banner-background
   background var(--home-banner-img) center center / cover no-repeat
   transition filter 0.3s ease
+  -webkit-backface-visibility hidden
+  -webkit-perspective 1000
 
 .home-banner-container
   font-family 'Chillax-Variable', sans-serif
